--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,14 @@
     <color name="colorPrimaryDark">#0D5BA6</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#D3D3D3</color>
+    <color name="darkgrey">#808080</color>
+    <color name="lightgrey">#F0F0F0</color>
+    <color name="black">#000000</color>
+    <color name="colorPrimaryRipple">#423F51B5</color>
+
+
+
+
 </resources>
+
