--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0D5BA6</color>
     <color name="colorPrimaryDark">#0D5BA6</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#FF0000</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#D3D3D3</color>
     <color name="darkgrey">#808080</color>
