filling shoping fragment

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -13,4 +13,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv"
+        >
+
+
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
