--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.CartFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="Cart" />
+        android:id="@+id/rv_cart"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
