--- a/app/src/main/res/layout/product_list_item_with_bg.xml
+++ b/app/src/main/res/layout/product_list_item_with_bg.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_centerVertical="true"
         android:layout_alignWithParentIfMissing="true"
         card_view:cardUseCompatPadding="true"
@@ -16,14 +17,14 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:background="@drawable/edge_color">
 
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 android:id="@+id/imageView"
 
                 />
@@ -34,7 +35,9 @@
                 android:id="@+id/productTitleTv"
                 android:layout_below="@id/imageView"
                 android:layout_centerHorizontal="true"
+                android:gravity="center"
                 android:textColor="@color/black"
+                android:maxLines="2"
                 android:fontFamily="sans-serif-medium"/>
 
             <TextView
@@ -48,15 +51,17 @@
                 android:fontFamily="sans-serif-medium"/>
 
             <Button
+                android:id="@+id/add_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:textColor="@color/white"
                 android:text="ADD"
-                android:layout_below="@id/productPriceTv"
                 android:background="@color/colorAccent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="20dp"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="25dp"/>
+
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
