--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="lightgrey">#F0F0F0</color>
     <color name="black">#000000</color>
     <color name="colorPrimaryRipple">#423F51B5</color>
+    <color name="whitesmoke">#F5F5F5</color>
 
 
 
