--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     <RelativeLayout
         android:id="@+id/header_rv"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+
+
         >
 
         <ImageView
@@ -22,6 +24,7 @@
             android:layout_marginLeft="25dp"
             android:src="@drawable/carrefour_logo_icon"/>
         <TextView
+            android:id="@+id/welcomeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -36,7 +39,52 @@
             />
 
 
+        <RelativeLayout
+            android:id="@+id/search_layout"
+            android:layout_below="@+id/welcomeTv"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:background="@color/darkblue">
 
+
+
+
+            <ImageView
+                android:id="@+id/searchIconImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search_icon"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:id="@+id/searchEt"
+                android:layout_toLeftOf="@id/searchIconImage"
+                android:layout_marginRight="4dp"
+                android:paddingLeft="5dp"
+                android:textColorHint="@color/whitesmoke"
+                android:hint="Search Product"
+                android:imeOptions="actionSearch"
+                android:layout_centerVertical="true"
+                android:textSize="14sp"
+                android:textColor="@color/whitesmoke"
+                android:focusableInTouchMode="true"
+                android:inputType="text"
+                android:background="@android:color/transparent"
+                />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_below="@id/search_layout"/>
 
     </RelativeLayout>
 
