--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="black">#000000</color>
     <color name="colorPrimaryRipple">#423F51B5</color>
     <color name="whitesmoke">#F5F5F5</color>
+    <color name="darkblue">#0B437C</color>
 
 
 
