--- a/app/src/main/res/layout/horizontal_list_items.xml
+++ b/app/src/main/res/layout/horizontal_list_items.xml
@@ -17,6 +17,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/containerlayout"
             >
 
             <ImageView
